<resources>
    <string name="app_name">HSBC Github App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="search_fragment_label">Search Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_token">personal token</string>
    <string name="token_direction">Follow the link to generate your personal access token</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_goto_login">Go To Login</string>
    <string name="logout_hint">Please login to view this page</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
