<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SearchFragment">

    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.tencent.wx.livestream.hsbcgithubapp.ui.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_SearchFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />

    </fragment>
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.tencent.wx.livestream.hsbcgithubapp.ui.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_ProfileFragment_to_SearchFragment"
            app:destination="@id/SearchFragment" />

        <action
            android:id="@+id/action_ProfileFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.tencent.wx.livestream.hsbcgithubapp.ui.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
    </fragment>

</navigation>
