<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.tencent.wx.livestream.hsbcgithubapp.networking.UserInfo" />
        <variable
            name="userInfo"
            type="com.tencent.wx.livestream.hsbcgithubapp.networking.UserInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".ui.ProfileFragment">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:letterSpacing="0.01"
            app:layout_constraintLeft_toRightOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@{userInfo.login}"
            tools:text="username"/>


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toRightOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintBottom_toTopOf="@id/joinedAt"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@{userInfo.email}"
            tools:text="email"/>

        <TextView
            android:id="@+id/joinedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toRightOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@{`Joined at ` + userInfo.joinedAt}"
            tools:text="joinedAt"/>

        <LinearLayout
            android:id="@+id/public_repos"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/followers"
            app:layout_constraintTop_toBottomOf="@+id/joinedAt"
            app:layout_constraintHorizontal_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{``+ userInfo.publicRepos}"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="3">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="repositories"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followers"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/public_repos"
            app:layout_constraintEnd_toStartOf="@id/following"
            app:layout_constraintTop_toBottomOf="@+id/joinedAt"
            app:layout_constraintHorizontal_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{`` + userInfo.followers}"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="3">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="followers"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/following"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinedAt"
            app:layout_constraintHorizontal_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{`` + userInfo.following}"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="3">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="following"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp">
            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/following" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/profile_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="avatar, user_name, email, joinedAt, logout, public_repos, followers, following" />

        <TextView
            android:id="@+id/logout_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/logout_hint">
        </TextView>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_goto_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_hint"
           />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/login_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="logout_hint, login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


